// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseZedWorkspace > parse local workspace with multiple paths 1`] = `
{
  "allPaths": [
    "/Users/raycast/Projects/zed-project-1",
    "/Users/raycast/Projects/zed-project-2",
  ],
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "/Users/raycast/Projects/zed-project-1",
  "type": "local",
  "uri": "file:///Users/raycast/Projects/zed-project-1",
}
`;

exports[`parseZedWorkspace > parse local workspace with single path 1`] = `
{
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "/Users/raycast/Projects/zed-project-1",
  "type": "local",
  "uri": "file:///Users/raycast/Projects/zed-project-1",
}
`;

exports[`parseZedWorkspace > parse remote workspace with multiple paths 1`] = `
{
  "allPaths": [
    "home/user/project1",
    "home/user/project2",
  ],
  "host": "example.com",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/user/project1",
  "type": "remote",
  "uri": "ssh://testuser@example.com:22/home/user/project1",
}
`;

exports[`parseZedWorkspace > parse remote workspace with single path, no user, no port 1`] = `
{
  "host": "example.com",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/user/project",
  "type": "remote",
  "uri": "ssh://example.com/home/user/project",
}
`;

exports[`parseZedWorkspace > parse remote workspace with single path, no user, with port 1`] = `
{
  "host": "example.com",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/user/project",
  "type": "remote",
  "uri": "ssh://example.com:22/home/user/project",
}
`;

exports[`parseZedWorkspace > parse remote workspace with single path, with user and port 1`] = `
{
  "host": "example.com",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/user/project",
  "type": "remote",
  "uri": "ssh://testuser@example.com:22/home/user/project",
}
`;

exports[`parseZedWorkspace > parse remote workspace with single path, with user, no port 1`] = `
{
  "host": "example.com",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/user/project",
  "type": "remote",
  "uri": "ssh://testuser@example.com/home/user/project",
}
`;
